2003-11-10  Naba Kumar  <naba@gnome.org>

	* anjuta.glade, anjuta_dialogs_strings.c: Fixed typos in
	'Start with dialog'.

	* configure.in, manuals/Makefile.in, manuals/de/* (new): Added
	German translation of anjuta-tutorial.
	
	* src/launcher.c: Fixed an encoding bug with GIOChannels.
	* NEWS: Updated.

2003-11-10  Jean-Noel Guiheneuf   <jnoel@saudionline.com.sa>

	* src/breakpoints.c, src/project_dbase.c, src/text_editor.c:
	Fixes the Bug #823249, Fixes the Bug #713229 When the user enables
	the syntax highlighting in Preferences, the automatic syntax
	highlighting is now selected. When the debugger is stopped and the
	breakpoints window not closed, the gtk_tree_view in this window is
	now made unsensitive.

2003-11-07  Johannes Schmid  <clubfan@users.sourceforge.net>

	* src/preferences.h, src/preferences.c, anjuta.glade:
	Fixed translation bug in preferences by using GtkOptionMenu
	* anjuta.prj: Project version 1.1.98

---------------- Released version 1.1.98 ----------------

2003-11-07  Naba Kumar  <naba@gnome.org>

	* anjuta.spec.in: Revived docs package and combined all docs into
	one package.
	* configure.in: Bumped version to 1.1.98 rc2
	* NEWS: Updated.
	* anjuta.spec.in: Fixed scrollkeepr-update command.
	* anjuta.spce.in: Fixed file permissions.

2003-11-06  Naba Kumar  <naba@gnome.org>

	* src/mainmenu_callback.[c,h], src/main_menubar_def.h: Added help
	menus to activate anjuta helps.
	
	* manuals/C/anjuta-faqs/anjuta-faqs.sgml (removed),
	manuals/C/anjuta-faqs/anjuta-faqs.xml (added),
	manuals/C/anjuta-faqs/legal.xml (added),
	manuals/C/anjuta-faqs/Makefile.am,
	manuals/C/anjuta-faqs/anjuta-faqs-C.omf,
	manuals/C/anjuta-faqs/.cvsignore,
	manuals/C/anjuta-tutorial/anjuta-tutorial.sgml (removed),
	manuals/C/anjuta-tutorial/anjuta-tutorial.xml (added),
	manuals/C/anjuta-tutorial/legal.xml (added),
	manuals/C/anjuta-tutorial/Makefile.am,
	manuals/C/anjuta-tutorial/anjuta-tutorial-C.omf,
	manuals/C/anjuta-tutorial/.cvsignore,