@@ -5,6 +5,7 @@ Bug fix: Freeze ups during build/debugging with other locales.
 Bug fix: Crash with readonly project files (during saves).
 Bug fix: Breakpoints bug.
 Bug fix: Syntax hiliting bug.
+Bug fix: Avoids error conditions for glade/glademm not found
 
 Anjuta 1.1.98 rc2 for 1.2.0   (07 Nov 2003) -- Naba Kumar
 
